Fix - Theme whitespace is 10px not 8, this fix page wrapper.

--- a/themes/elmcip/css/layout-fixed.css
+++ b/themes/elmcip/css/layout-fixed.css
@@ -136,8 +136,7 @@ body {
 }
 
 #content .section {
-  margin: 0;
-  padding: 8px;
+  margin: 10px;
 }
 
 /*
